k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dehydrated-frontend
  labels:
    name: dehydrated-frontend
